--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="wrapper">
         <h1>Random Password Generator</h1>
         <div class="input">
-            <input type="text" name="" id="password" placeholder="Create Password" readonly>
+            <input type="text" name="" id="password" autocomplete="off" placeholder="Create Password" readonly>
         </div>
         <div class="buttons">
             <button id="button" class="btn1" onclick="genPassword()">Generate</button>
